Added image sizing

--- a/index.html
+++ b/index.html
@@ -1,56 +1,74 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Heavy Metal Workforce</title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+        }
+
+        .imgbox {
+            display: grid;
+            height: 100%;
+        }
+
+        .center-fit {
+            max-width: 100%;
+            max-height: 100vh;
+            margin: auto;
+        }
+    </style>
 </head>
 
 <body>
+    <div class="imgbox">
+        <img class="center-fit" src="workforce.png" alt="Heavy Metal Workforce" />
+    </div>
 
-    <img src="workforce.png" alt="Heavy Metal Workforce" />
-    <p>
-        Liebe Kolleg*innen,
-        wir möchten euch unsere Wahlvorschlagsliste „Heavy Metal Workforce“ vorstellen,
-        mit der wir zur Betriebsratswahl bei EMP am 18.06.2024 antreten.
-    </p>
+    <div>
+        <p>
+            Liebe Kolleg*innen,
+            wir möchten euch unsere Wahlvorschlagsliste „Heavy Metal Workforce“ vorstellen,
+            mit der wir zur Betriebsratswahl bei EMP am 18.06.2024 antreten.
+        </p>
 
-    <p>
-        EMP hat seine Wurzeln in der Heavy Metal Fankultur,
-        und wir fühlen uns diesen Ursprüngen und den Werten dieser Szene wie Bodenständigkeit,
-        Authentizität und Zusammenhalt eng verbunden.
-    </p>
+        <p>
+            EMP hat seine Wurzeln in der Heavy Metal Fankultur,
+            und wir fühlen uns diesen Ursprüngen und den Werten dieser Szene wie Bodenständigkeit,
+            Authentizität und Zusammenhalt eng verbunden.
+        </p>
 
-    <p>
-        Der englische Begriff „Workforce“ bedeutet übersetzt nichts anderes als „Belegschaft“,
-        denn wir sind alle stolz darauf ein Teil der EMP-Crew zu sein und mit euch allen zusammenarbeiten zu dürfen.
-    </p>
+        <p>
+            Der englische Begriff „Workforce“ bedeutet übersetzt nichts anderes als „Belegschaft“,
+            denn wir sind alle stolz darauf ein Teil der EMP-Crew zu sein und mit euch allen zusammenarbeiten zu dürfen.
+        </p>
 
-    <p>
-        Wir legen großen Wert auf eine Zusammenarbeit auf Augenhöhe.
-        Wir wollen keine Egos, keine Spielchen und keine Schuldzuweisungen.
-        Es ist uns wichtig, dass sich die Mitglieder des Betriebsrats aus möglichst vielen Abteilungen
-        und Teams zusammensetzen und wir viele verschiedene Meinungen und Blickwinkel auf unsere Arbeitsplätze erhalten.
-    </p>
+        <p>
+            Wir legen großen Wert auf eine Zusammenarbeit auf Augenhöhe.
+            Wir wollen keine Egos, keine Spielchen und keine Schuldzuweisungen.
+            Es ist uns wichtig, dass sich die Mitglieder des Betriebsrats aus möglichst vielen Abteilungen
+            und Teams zusammensetzen und wir viele verschiedene Meinungen und Blickwinkel auf unsere Arbeitsplätze
+            erhalten.
+        </p>
 
-    <p>
-        Für uns ist es besonders wichtig, jederzeit für euch da zu sein.
-        Wir stehen euch bei Konflikten mit Kollegen und Vorgesetzten zur Seite, begleiten euch zu Mitarbeitergesprächen,
-        hören immer aufmerksam zu und arbeiten diskret mit euch an Lösungen für eure Anliegen.
-    </p>
+        <p>
+            Für uns ist es besonders wichtig, jederzeit für euch da zu sein.
+            Wir stehen euch bei Konflikten mit Kollegen und Vorgesetzten zur Seite, begleiten euch zu
+            Mitarbeitergesprächen,
+            hören immer aufmerksam zu und arbeiten diskret mit euch an Lösungen für eure Anliegen.
+        </p>
 
-    <p>
-        Wir danken euch für euer Vertrauen, und hoffen auf eure Unterstützung bei der anstehenden Wahl.
-    </p>
-
-    <p>
-        Miteinander, Füreinander, EMP.
-    </p>
-
-    <p>
-        Eure „Heavy Metal Workforce“
-    </p>
+        <p>Wir danken euch für euer Vertrauen, und hoffen auf eure Unterstützung bei der anstehenden Wahl. </p>
+        <p>Miteinander, Füreinander, EMP.</p>
+        <p>Eure „Heavy Metal Workforce“</p>
+    </div>
+    <div class="imgbox">
+        <img class="center-fit" src="main.jpg" alt="Group Image" />
+    </div>
 </body>
 
 </html>
