--- a/index.html
+++ b/index.html
@@ -11,6 +11,19 @@
             padding: 0;
         }
 
+        body {
+            font-family: 'Arial', sans-serif;
+            font-size: 16px;
+            line-height: 1.6;
+            background-color: rgb(0, 0, 0);
+        }
+
+        p {
+            color: white;
+            font-size: 1.2em;
+            margin-top: 1%;
+        }
+
         .imgbox {
             display: grid;
             height: 100%;
@@ -18,56 +31,62 @@
 
         .center-fit {
             max-width: 100%;
-            max-height: 100vh;
+            max-height: 80vh;
             margin: auto;
+        }
+
+        .container {
+            padding: 20px;
+            margin: 0 auto;
+            max-width: 1200px;
         }
     </style>
 </head>
 
 <body>
     <div class="imgbox">
-        <img class="center-fit" src="workforce.png" alt="Heavy Metal Workforce" />
+        <img class="center-fit" src="main.jpg" alt="Group Image" />
     </div>
 
-    <div>
+    <div class="container">
         <p>
-            Liebe Kolleg*innen,
-            wir möchten euch unsere Wahlvorschlagsliste „Heavy Metal Workforce“ vorstellen,
+            Liebe Kolleg*innen,<br />
+            wir möchten euch unsere Wahlvorschlagsliste „Heavy Metal Workforce“ vorstellen,<br />
             mit der wir zur Betriebsratswahl bei EMP am 18.06.2024 antreten.
         </p>
 
         <p>
-            EMP hat seine Wurzeln in der Heavy Metal Fankultur,
-            und wir fühlen uns diesen Ursprüngen und den Werten dieser Szene wie Bodenständigkeit,
+            EMP hat seine Wurzeln in der Heavy Metal Fankultur,<br />
+            und wir fühlen uns diesen Ursprüngen und den Werten dieser Szene wie Bodenständigkeit,<br />
             Authentizität und Zusammenhalt eng verbunden.
         </p>
 
         <p>
-            Der englische Begriff „Workforce“ bedeutet übersetzt nichts anderes als „Belegschaft“,
+            Der englische Begriff „Workforce“ bedeutet übersetzt nichts anderes als „Belegschaft“,<br />
             denn wir sind alle stolz darauf ein Teil der EMP-Crew zu sein und mit euch allen zusammenarbeiten zu dürfen.
         </p>
 
         <p>
-            Wir legen großen Wert auf eine Zusammenarbeit auf Augenhöhe.
-            Wir wollen keine Egos, keine Spielchen und keine Schuldzuweisungen.
-            Es ist uns wichtig, dass sich die Mitglieder des Betriebsrats aus möglichst vielen Abteilungen
+            Wir legen großen Wert auf eine Zusammenarbeit auf Augenhöhe.<br />
+            Wir wollen keine Egos, keine Spielchen und keine Schuldzuweisungen.<br />
+            Es ist uns wichtig, dass sich die Mitglieder des Betriebsrats aus möglichst vielen Abteilungen<br />
             und Teams zusammensetzen und wir viele verschiedene Meinungen und Blickwinkel auf unsere Arbeitsplätze
             erhalten.
         </p>
 
         <p>
-            Für uns ist es besonders wichtig, jederzeit für euch da zu sein.
-            Wir stehen euch bei Konflikten mit Kollegen und Vorgesetzten zur Seite, begleiten euch zu
-            Mitarbeitergesprächen,
+            Für uns ist es besonders wichtig, jederzeit für euch da zu sein.<br />
+            Wir stehen euch bei Konflikten mit Kollegen und Vorgesetzten zur Seite,<br />
+            begleiten euch zu Mitarbeitergesprächen,<br />
             hören immer aufmerksam zu und arbeiten diskret mit euch an Lösungen für eure Anliegen.
         </p>
 
         <p>Wir danken euch für euer Vertrauen, und hoffen auf eure Unterstützung bei der anstehenden Wahl. </p>
         <p>Miteinander, Füreinander, EMP.</p>
-        <p>Eure „Heavy Metal Workforce“</p>
+        <p>Eure <b>Heavy Metal Workforce</b></p>
     </div>
     <div class="imgbox">
-        <img class="center-fit" src="main.jpg" alt="Group Image" />
+        <img class="center-fit" src="workforce.png" alt="Heavy Metal Workforce" />
     </div>
 </body>
 
