Added english version

--- a/index.html
+++ b/index.html
@@ -85,6 +85,46 @@
         <p>Miteinander, Füreinander, EMP.</p>
         <p>Eure <b>Heavy Metal Workforce</b></p>
     </div>
+    <br />
+    <br />
+    <br />
+    <div class="container">
+        <p>
+            Dear colleagues,
+            We would like to present our “Heavy Metal Workforce” list of candidates for the works council elections at
+            EMP on June 18, 2024.
+        </p>
+
+        <p>
+            EMP has its roots in heavy metal fan culture, and we feel closely connected to these origins and the values
+            of this scene such as down-to-earthness, authenticity and cohesion.
+        </p>
+
+        <p>
+            We put the word “workforce”, or “staff”, into the name of our list, because we are all proud to be part of
+            the EMP crew and to be able to work together with all of you.
+        </p>
+
+        <p>
+            We attach great importance to working together as equals. We don't want egos, intrigues, or
+            finger-pointing.<br />
+            It is important to us that the members of the Works Council are made up of as many departments and teams as
+            possible and that we receive many different opinions and perspectives on our workplaces.
+        </p>
+
+        <p>
+            It is particularly important for us to be there for you at all times.<br />
+            We are at your side during conflicts with colleagues and superiors,
+            accompany you to appraisal interviews, always listen attentively and work discreetly with you to find
+            solutions for your concerns.
+        </p>
+
+        <p>We thank you for your trust and hope for your support in the upcoming election.</p>
+        <p>With each other, for each other, EMP.</p>
+
+        <p>Your <b>Heavy Metal Workforce</b></p>
+
+    </div>
     <div class="imgbox">
         <img class="center-fit" src="workforce.png" alt="Heavy Metal Workforce" />
     </div>
