--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     <br />
     <div class="container">
         <p>
-            Dear colleagues,
+            Dear colleagues,<br/>
             We would like to present our “Heavy Metal Workforce” list of candidates for the works council elections at
             EMP on June 18, 2024.
         </p>
